MZ-11 added Global Resources; added language selector

--- a/src/Mzayad.Web/Views/Shared/_Layout.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout.cshtml
@@ -18,10 +18,12 @@
                 @Html.ActionLink("Mzayad", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
+                <ul class="nav navbar-nav navbar-right">
+                    <li>@Html.ActionLink(Global.Home, "Index", "Home")</li>
+
+                    @Html.Partial("_LoginPartial")
+                    @Html.Partial("_Layout_LanguageSelector")
                 </ul>
-                @Html.Partial("_LoginPartial")
             </div>
         </div>
     </div>
