--- a/src/Mzayad.Web/Content/site-layout.less
+++ b/src/Mzayad.Web/Content/site-layout.less
@@ -8,3 +8,9 @@
 .navbar-inverse .navbar-nav > li > a {
     color: white;
 }
+
+.navbar-nav .btn-link {
+    border: 0;
+    padding: 15px;
+    color: white !important;
+}
