--- a/src/Mzayad.Web/Views/Shared/_Layout.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout.cshtml
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mzayad</title>
     @Styles.Render("~/css")
+    @RenderSection("styles",false)
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
