MZ-2 added Status Message bits

--- a/src/Mzayad.Web/Views/Shared/_Layout.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mzayad</title>
     @Styles.Render("~/css")
-    @RenderSection("styles",false)
+    @RenderSection("styles", false)
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -29,6 +29,11 @@
         </div>
     </div>
     <div class="container body-content">
+        @if (!string.IsNullOrWhiteSpace(ViewBag.Title))
+        {
+            <h1 id="page-title">@ViewBag.Title</h1>
+        }
+        @Html.Partial("_Layout_StatusMessage")
         @RenderBody()
         <hr />
         <footer>
