MZ-2 imported account views

--- a/src/Mzayad.Web/Views/Shared/_Layout_UserMyAccount.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout_UserMyAccount.cshtml
@@ -11,5 +11,5 @@
 }
 else
 {
-    <li><a href="@Url.Action("SignIn", "Account")">@Global.MyAccount</a></li>
+    <li><a href="@Url.Action("SignIn", "Account", new { LanguageCode = Html.LanguageCode() })">@Global.MyAccount</a></li>
 }
