MZ-2 adding forms css

--- a/src/Mzayad.Web/Content/site-layout.less
+++ b/src/Mzayad.Web/Content/site-layout.less
@@ -14,3 +14,8 @@
     padding: 15px;
     color: white !important;
 }
+
+#page-title {
+    padding-bottom: 0.5em;
+    border-bottom: 1px solid #eee;
+}
