--- a/src/Mzayad.Web/Content/site.less
+++ b/src/Mzayad.Web/Content/site.less
@@ -22,6 +22,10 @@ h1, h2, h3, h4 {
     margin-bottom: 1em;
 }
 
+h1 {
+    font-size: 3rem;
+}
+
 .alert {
     border-radius: 0;
     border-width: 2px;
