MZ-2 added wow.js and animate.css; added fade in effect to status message

--- a/src/Mzayad.Web/Views/Shared/_Layout_StatusMessage.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout_StatusMessage.cshtml
@@ -5,5 +5,7 @@
 
 @if (statusMessage != null)
 {
-    @Html.StatusMessage(statusMessage)
+    <div class="wow fadeIn">
+        @Html.StatusMessage(statusMessage)
+    </div>
 }
