--- a/src/Mzayad.Web/Content/site-forms.less
+++ b/src/Mzayad.Web/Content/site-forms.less
@@ -100,6 +100,14 @@ input[type="checkbox"].input-validation-error {
     display: none;
 }
 
+.required-label {
+    display: inline-block;
+    margin: -4px 0 0 8px;
+    color: @danger;
+    font-size: 1rem;
+    vertical-align: text-top;
+}
+
 .localized-content {
     > li {
         margin-bottom: 5px;
