--- a/src/Mzayad.Web/Views/Account/SignIn.cshtml
+++ b/src/Mzayad.Web/Views/Account/SignIn.cshtml
@@ -46,13 +46,10 @@
                 <button type="submit" class="btn btn-default">@Global.Continue</button>
             </section>
             
-            <p class="text-center">Don't have an account? <a href="#">Register for free<i class="fa fa-pad-left fa-angle-right"></i></a></p>
+            <p class="text-center">@Global.DontHaveAccountQuestion <a href="@Url.Action("Register", new { language = Html.Language() })">@Html.Raw(Global.RegisterLinkText)</a></p>
         }
     </div>
 </div>
-
-
-
 
 @section scripts {
     @Scripts.Render("/js/validate")
