--- a/src/Mzayad.Web/Views/Shared/_Layout.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Mzayad.Web.Extensions
 <!DOCTYPE html>
-<html lang="@Html.LanguageCode()" dir="@(Html.IsArabic() ? "rtl" : "ltr")">
+<html lang="@Html.Language()" dir="@(Html.IsArabic() ? "rtl" : "ltr")">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -17,11 +17,11 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Mzayad", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                <a href="@Url.Action("Index", "Home", new {area = "", language = Html.Language()})" class="navbar-brand"><i class="fa fa-gavel fa-lg"></i> Mzayad</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav navbar-right">
-                    <li>@Html.ActionLink(Global.Home, "Index", "Home")</li>
+                    <li>@Html.ActionLink(Global.Home, "Index", "Home", new { area = "", language = Html.Language() }, null)</li>
                     @Html.Partial("_Layout_UserMyAccount")
                     @Html.Partial("_Layout_LanguageSelector")
                 </ul>
