--- a/src/Mzayad.Web/Content/site.less
+++ b/src/Mzayad.Web/Content/site.less
@@ -30,9 +30,11 @@ h1 {
     border-radius: 0;
     border-width: 2px;
     border-left-width: 10px;
+    font-size: 1.6rem;
 
     .alert-link {
         font-weight: normal;
+        text-decoration: underline !important;
     }
 }
 
