--- a/src/Mzayad.Web/Views/Account/NeedPassword.cshtml
+++ b/src/Mzayad.Web/Views/Account/NeedPassword.cshtml
@@ -1,21 +1,26 @@
-﻿@model NeedPasswordViewModel
+﻿@model Mzayad.Web.Models.Account.NeedPasswordViewModel
 
 @{
     ViewBag.Title = Global.NeedPassword;
 }
 
-<p>@Global.NeedPasswordInstructions</p>
+<p class="lead">@Global.NeedPasswordInstructions</p>
 
 <div class="row">
     <div class="@Html.Css().FormNarrow">
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
-         
+
             <section>
                 <div class="form-group">
-                    @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = Global.Email, autofocus = "autofocus" })
-                    @Html.ValidationMessageFor(m => m.Email)
+                    <div class="input-group">
+                        <div class="input-group-addon">
+                            <i class="fa fa-user fa-fw"></i>
+                        </div>
+                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control", placeholder = Global.Email, autofocus = "autofocus" })
+                    </div>
+                    @Html.ValidationMessageFor(m => m.Email, Global.EmailRequiredErrorMessage)
                 </div>
             </section>
 
