--- a/src/Mzayad.Web/Views/Account/ResetPassword.cshtml
+++ b/src/Mzayad.Web/Views/Account/ResetPassword.cshtml
@@ -1,9 +1,9 @@
-﻿@model ResetPasswordViewModel
+﻿@model Mzayad.Web.Models.Account.ResetPasswordViewModel
 @{
     ViewBag.Title = Global.ResetPassword;
 }
 
-<p>@Global.ResetPasswordInstructions</p>
+<p class="lead">@Global.ResetPasswordInstructions</p>
 
 <div class="row">
     <div class="@Html.Css().FormNarrow">
@@ -13,8 +13,11 @@
 
             <section>
                 <div class="form-group">
-                    @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control", autofocus = "autofocus", placeholder = Global.NewPassword })
-                    @Html.ValidationMessageFor(m => m.NewPassword)
+                    <div class="input-group">
+                        <span class="input-group-addon"><i class="fa fa-lock fa-fw"></i></span>
+                        @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control", autofocus = "autofocus", placeholder = Global.NewPassword })
+                    </div>
+                    @Html.ValidationMessageFor(m => m.NewPassword, Global.PasswordInvalidErrorMessage)
                 </div>
             </section>
 
