--- a/src/Mzayad.Web/Content/site.css
+++ b/src/Mzayad.Web/Content/site.css
@@ -23,6 +23,15 @@ h4 {
 h1 {
   font-size: 3rem;
 }
+.lead {
+  font-size: 1.6rem;
+  font-weight: normal;
+}
+@media (min-width: 768px) {
+  .lead {
+    font-size: 2rem;
+  }
+}
 .alert {
   border-radius: 0;
   border-width: 2px;
