MZ-12 updated form controls and button CSS slightly

--- a/src/Mzayad.Web/Content/site-arabic.less
+++ b/src/Mzayad.Web/Content/site-arabic.less
@@ -1,7 +1,9 @@
-﻿:lang(ar) {
+﻿@import url('variables.less');
+
+:lang(ar) {
 
     body {
-        font-size: 1.6rem;
+        font-size: @font-size + 0.1;
     }
 
     .nav {
