--- a/src/Mzayad.Web/Content/site-forms.css
+++ b/src/Mzayad.Web/Content/site-forms.css
@@ -29,7 +29,10 @@ input[type=number].no-spinner::-webkit-outer-spin-button {
 }
 .form-control {
   height: auto;
-  font-size: 1.4rem;
+  min-height: 38px;
+  font-size: 1.5rem;
+  line-height: 2.4rem;
+  box-shadow: none;
 }
 .form-control,
 .btn {
@@ -61,8 +64,53 @@ input[type=number].no-spinner::-webkit-outer-spin-button {
 .form-group .form-control:last-child {
   margin-bottom: 0;
 }
-.btn {
+.input-group-addon {
+  border-radius: 0;
+  font-size: 1.5rem;
+  line-height: 2.4rem;
+}
+.btn,
+.btn:hover,
+.btn:focus {
+  padding: 10px 24px;
   outline: none !important;
+  border: none !important;
+  box-shadow: none;
+  text-shadow: none;
+  opacity: 1;
+  -moz-transition: opacity 0.25s ease-in-out;
+  -o-transition: opacity 0.25s ease-in-out;
+  -webkit-transition: opacity 0.25s ease-in-out;
+  transition: opacity 0.25s ease-in-out;
+  font-size: 1.6rem;
+  font-weight: normal;
+  letter-spacing: 2px;
+}
+@media (max-width: 320px) {
+  .btn,
+  .btn:hover,
+  .btn:focus {
+    font-size: 14px;
+  }
+}
+.btn:lang(ar),
+.btn:hover:lang(ar),
+.btn:focus:lang(ar) {
+  letter-spacing: normal;
+}
+.btn:hover,
+.btn:hover:hover,
+.btn:focus:hover {
+  opacity: 0.7;
+}
+.btn-default,
+.btn-default:hover,
+.btn-default:focus {
+  background: #132e72;
+  color: #ffffff;
+}
+.btn-link {
+  opacity: 1 !important;
 }
 .field-validation-error {
   color: #b94a48;
