--- a/src/Mzayad.Web/Content/variables.less
+++ b/src/Mzayad.Web/Content/variables.less
@@ -1,7 +1,11 @@
 ﻿@media-widescreen: ~"(min-width: 1200px)";
+@media-widescreen: ~"(min-width: 1200px)";
 @media-desktop: ~"(min-width: 768px)";
 @media-mobile: ~"(max-width: 767px)";
 @media-smallscreen: ~"(max-width: 320px)";
+
+@font-size: 1.5rem;
+@line-height: @font-size + 0.9;
 
 @base: #132e72;
 @white: #fff;
