--- a/src/Mzayad.Web/Content/site-forms.less
+++ b/src/Mzayad.Web/Content/site-forms.less
@@ -127,7 +127,7 @@ input[type=number].no-spinner::-webkit-outer-spin-button {
 
 input.input-validation-error,
 textarea.input-validation-error {
-    border: 1px solid @danger;
+    border-color: @danger;
 }
 
 input[type="checkbox"].input-validation-error {
