--- a/src/Mzayad.Web/Content/site.less
+++ b/src/Mzayad.Web/Content/site.less
@@ -35,6 +35,18 @@ h1 {
     }
 }
 
+.text-success {
+    color: @success;
+}
+
+.text-danger {
+    color: @danger;
+}
+
+.text-warning {
+    color: @warning;
+}
+
 .alert {
     border-radius: 0;
     border-width: 2px;
