--- a/src/Mzayad.Web/Content/site.css
+++ b/src/Mzayad.Web/Content/site.css
@@ -32,6 +32,15 @@ h1 {
     font-size: 2rem;
   }
 }
+.text-success {
+  color: #008c00;
+}
+.text-danger {
+  color: #b94a48;
+}
+.text-warning {
+  color: #d9a300;
+}
 .alert {
   border-radius: 0;
   border-width: 2px;
