--- a/src/Mzayad.Web/Content/site-forms.less
+++ b/src/Mzayad.Web/Content/site-forms.less
@@ -1,7 +1,7 @@
 ﻿@import url("variables");
 
 form section, section.form-section {
-    background: #F9F9FB;
+    background: #f5f5f5;
 
     @media screen {
         padding: 32px;
