--- a/src/Mzayad.Web/Views/Account/Register.cshtml
+++ b/src/Mzayad.Web/Views/Account/Register.cshtml
@@ -27,36 +27,36 @@
 
             <section>
                 <div class="form-group">
-                    @Html.LabelFor(m => m.FirstName, Global.FirstName).Required()
-                    @Html.TextBoxFor(m => m.FirstName, new { @class = "form-control", autocorrect = "off", spellcheck = "false", autofocus = "autofocus" })
+                    @Html.LabelFor(m => m.FirstName, Global.FirstName).Required("All Fields Required")
+                    @Html.TextBoxFor(m => m.FirstName, new {@class = "form-control", autocorrect = "off", spellcheck = "false", autofocus = "autofocus"})
                     @Html.ValidationMessageFor(m => m.FirstName, Global.FirstNameRequiredErrorMessage)
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(m => m.LastName, Global.LastName).Required()
-                    @Html.TextBoxFor(m => m.LastName, new { @class = "form-control", autocorrect = "off", spellcheck = "false" })
+                    @Html.LabelFor(m => m.LastName, Global.LastName)
+                    @Html.TextBoxFor(m => m.LastName, new {@class = "form-control", autocorrect = "off", spellcheck = "false"})
                     @Html.ValidationMessageFor(m => m.LastName, Global.LastNameRequiredErrorMessage)
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Email, Global.Email).Required()
+                    @Html.LabelFor(m => m.Email, Global.Email)
                     <div class="input-group">
                         <span class="input-group-addon"><i class="fa fa-fw fa-at"></i></span>
-                        @Html.TextBoxFor(m => m.Email, new { @class = "form-control", type = "email" })
+                        @Html.TextBoxFor(m => m.Email, new {@class = "form-control", type = "email"})
                     </div>
                     @Html.ValidationMessageFor(m => m.Email, Global.EmailRequiredErrorMessage)
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(m => m.Password, Global.Password).Required()
+                    @Html.LabelFor(m => m.Password, Global.Password)
                     <div class="input-group">
                         <span class="input-group-addon"><i class="fa fa-fw fa-lock"></i></span>
-                        @Html.PasswordFor(m => m.Password, new { @class = "form-control" })
+                        @Html.PasswordFor(m => m.Password, new {@class = "form-control"})
                     </div>
                     @Html.ValidationMessageFor(m => m.Password, Global.PasswordInvalidErrorMessage)
                 </div>
                 <div class="form-group">
-                    @Html.LabelFor(m => m.UserName, Global.UserName).Required()
+                    @Html.LabelFor(m => m.UserName, Global.UserName)
                     <div class="input-group">
                         <span class="input-group-addon"><i class="fa fa-fw fa-user"></i></span>
-                        @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", autocorrect = "off", spellcheck = "false" })
+                        @Html.TextBoxFor(m => m.UserName, new {@class = "form-control", autocorrect = "off", spellcheck = "false"})
                     </div>
                     @Html.ValidationMessageFor(m => m.UserName, Global.UserNameRequiredErrorMessage)
                     <div id="username-validate" class="text-right">
@@ -71,7 +71,13 @@
                         </div>
                     </div>
                 </div>
+            </section>
 
+            <section>
+                <div class="form-group">
+                    <i class="fa fa-lg fa-check-square-o"></i>
+                    @Html.Raw(string.Format(Global.RegistrationAgreementAcknowledgement, Url.Action("TermsAndConditions", "Home", new { Language = Html.Language() })))
+                </div>
             </section>
 
             <section class="form-buttons">
