--- a/src/Mzayad.Web/Views/Shared/_Layout_LanguageSelector.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout_LanguageSelector.cshtml
@@ -5,11 +5,11 @@
 }
 
 <li>
-    @using (Html.BeginForm("ChangeLanguage", "Home", new { area = ""}))
+    @using (Html.BeginForm("ChangeLanguage", "Home", new { area = "" }))
     {
         @Html.AntiForgeryToken()
         <input type="hidden" name="returnUrl" value="@Request.Url" />
-        <input type="hidden" name="languageCode" value="@otherLanguage.TwoLetterISOLanguageName" />
+        <input type="hidden" name="language" value="@otherLanguage.TwoLetterISOLanguageName" />
         <button type="submit" class="btn btn-link" lang="@otherLanguage.TwoLetterISOLanguageName" title="@Global.ChangeLanguage">@otherLanguage.NativeName</button>
     }
 </li>
