--- a/src/Mzayad.Web/Views/Shared/_Layout.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout.cshtml
@@ -4,7 +4,12 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mzayad</title>
+    <title>@Html.PageTitle()</title> 
+    <link rel="apple-touch-icon" href="http://az723232.vo.msecnd.net/assets/mzayad-favicon-32x32-635593381391686784.png"> @* should be 152x152 *@
+    <link rel="icon" href="http://az723232.vo.msecnd.net/assets/mzayad-favicon-32x32-635593381391686784.png">@* should be 96x96 *@
+    <!--[if IE]><link rel="shortcut icon" href="/favicon.ico"><![endif]--> @* should be 16x16 and 32x32 *@
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="http://az723232.vo.msecnd.net/assets/mzayad-favicon-32x32-635593381391686784.png">@* should be 144x144 *@
     @Styles.Render("~/css")
     @RenderSection("styles", false)
 </head>
