MZ-6 Add Email Templates feature. This includes the database tables, service, db migration, and admin SettingsController.

--- a/src/Mzayad.Web/Views/Shared/_Layout.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout.cshtml
@@ -29,6 +29,7 @@
         </div>
     </div>
     <div class="container body-content">
+        @Html.Partial("_Layout_StatusMessage")
         @RenderBody()
         <hr />
         <footer>
