--- a/src/Mzayad.Web/Areas/admin/Views/Shared/_Layout.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Shared/_Layout.cshtml
@@ -7,19 +7,22 @@
 @section styles {
     @Styles.Render("~/css/admin")
     @RenderSection("styles", false)
+    <style>
+        a[disabled] {
+            opacity: 0.5;
+        }
+    </style>
 }
 
 <div class="row">
     <div class="col-lg-3 col-md-4 hidden-print">
         <ul class="menu-list">
-            
-            <li><a href="@Url.Action("Index", "Categories")"><i class="fa fa-fw fa-pad-right fa-sitemap"></i>Categories</a></li>
-            <li><a href="@Url.Action("Index", "Products")"><i class="fa fa-fw fa-pad-right fa-sitemap"></i>Products</a></li>
-            <li><a href="@Url.Action("Index", "Auctions")"><i class="fa fa-fw fa-pad-right fa-sitemap"></i>Auctions</a></li>
-            <li><a href="@Url.Action("Index", "Users")"><i class="fa fa-fw fa-pad-right fa-sitemap"></i>Users</a></li>
-            <li><a href="@Url.Action("Index", "Reports")"><i class="fa fa-fw fa-pad-right fa-sitemap"></i>Reports</a></li>
-            <li><a href="#" class="show-hidden"><i class="fa fa-fw fa-pad-right fa-ellipsis-v"></i>More</a></li>
-            <li class="menu-list-hidden"><a href="@Url.Action("EmailTemplates", "Settings")"><i class="fa fa-fw fa-pad-right fa-envelope"></i>Email Templates</a></li>
+            <li><a href="@Url.Action("EmailTemplates", "Settings")"><i class="fa fa-fw fa-pad-right fa-envelope"></i>Email Templates</a></li> 
+            <li><a disabled href="@Url.Action("Index", "Categories")"><i class="fa fa-fw fa-pad-right fa-sitemap"></i>Categories</a></li>
+            <li><a disabled href="@Url.Action("Index", "Products")"><i class="fa fa-fw fa-pad-right fa-sitemap"></i>Products</a></li>
+            <li><a disabled href="@Url.Action("Index", "Auctions")"><i class="fa fa-fw fa-pad-right fa-sitemap"></i>Auctions</a></li>
+            <li><a disabled href="@Url.Action("Index", "Users")"><i class="fa fa-fw fa-pad-right fa-sitemap"></i>Users</a></li>
+            <li><a disabled href="@Url.Action("Index", "Reports")"><i class="fa fa-fw fa-pad-right fa-sitemap"></i>Reports</a></li>
         </ul>
     </div>
     <div class="col-lg-9 col-md-8">
@@ -32,4 +35,11 @@
     <script src="~/Scripts/kendo.aspnetmvc.min.js"></script>
     @Html.Kendo().DeferredScripts()
     @RenderSection("scripts", false)
+    <script>
+        $(function() {
+            $("a[disabled").on("click", function(e) {
+                e.preventDefault();
+            });
+        })
+    </script>
 }
