MZ-15 added phone number to registration; increased phone field lengths

--- a/src/Mzayad.Web/Content/site-forms.css
+++ b/src/Mzayad.Web/Content/site-forms.css
@@ -64,6 +64,9 @@ input[type=number].no-spinner::-webkit-outer-spin-button {
 .form-group .form-control:last-child {
   margin-bottom: 0;
 }
+.form-inline .form-control:last-child {
+  margin-bottom: 5px;
+}
 .input-group-addon {
   border-radius: 0;
   font-size: 1.5rem;
