--- a/src/Mzayad.Web/Content/site-forms.less
+++ b/src/Mzayad.Web/Content/site-forms.less
@@ -74,6 +74,10 @@ input[type=number].no-spinner::-webkit-outer-spin-button {
     margin-bottom: 0;
 }
 
+.form-inline .form-control:last-child {
+    margin-bottom: 5px;
+}
+
 .input-group-addon {
     border-radius: 0;
     font-size: @font-size;
