--- a/src/Mzayad.Web/Views/Shared/_Layout.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout.cshtml
@@ -33,7 +33,7 @@
             </div>
         </div>
     </div>
-    <div class="container body-content">
+    <div id="main" class="container body-content">
         @if (!string.IsNullOrWhiteSpace(ViewBag.Title))
         {
             <h1 id="page-title">@ViewBag.Title</h1>
