--- a/src/Mzayad.Web/Views/Account/SignIn.cshtml
+++ b/src/Mzayad.Web/Views/Account/SignIn.cshtml
@@ -46,7 +46,7 @@
                 <button type="submit" class="btn btn-default">@Global.Continue</button>
             </section>
             
-            <p class="text-center">@Global.DontHaveAccountQuestion <a href="@Url.Action("Register", new { language = Html.Language() })">@Html.Raw(Global.RegisterLinkText)</a></p>
+            <p class="text-larger text-center">@Global.DontHaveAccountQuestion <a href="@Url.Action("Register", new { language = Html.Language() })">@Html.Raw(Global.RegisterLinkText)</a></p>
         }
     </div>
 </div>
