MZ-15 added jquery UI; added new email template; polished up registration form

--- a/src/Mzayad.Web/Areas/admin/Views/Docs/Item.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Docs/Item.cshtml
@@ -1,9 +1,25 @@
 ﻿@model FileInfo
 @{
-    ViewBag.Title = "Docs - " + Path.GetFileNameWithoutExtension(Model.FullName);
+    ViewBag.Title = "Development Docs - " + Path.GetFileNameWithoutExtension(Model.FullName);
 
     var markdown = new MarkdownSharp.Markdown();
     var content = markdown.Transform(File.ReadAllText(Model.FullName));
 }
 
-@Html.Raw(content)
+<div id="doc-content">
+    @Html.Raw(content)
+</div>
+
+@section scripts {
+    <script>
+        (function($) {
+
+            $(function() {
+                $("#doc-content").find("img").each(function () {
+                    $(this).addClass("img-responsive");
+                });
+            });
+
+        })(jQuery);
+    </script>
+}
