--- a/src/Mzayad.Web/Views/Home/Index.cshtml
+++ b/src/Mzayad.Web/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
-    ViewBag.Title = "Home";
+    ViewBag.Title = Global.Home;
 }
 
 <div class="jumbotron">
-    <h1>Welcome</h1>
+    <h1>@Global.Welcome</h1>
 </div>
