--- a/src/Mzayad.Web/Views/Shared/EditorTemplates/Address_KW.cshtml
+++ b/src/Mzayad.Web/Views/Shared/EditorTemplates/Address_KW.cshtml
@@ -3,7 +3,7 @@
 
 <div class="form-group">
     @Html.LabelFor(m => m.CityArea, Global.Area).Required()
-    @Html.TextBoxFor(m => m.CityArea, new { @class = "form-control" })
+    @Html.TextBoxFor(m => m.CityArea, new { @class = "form-control kuwait-area" })
     @Html.ValidationMessageFor(m => m.CityArea, Global.AreaRequiredErrorMessage)
 </div>
 
