--- a/src/Mzayad.Web/Areas/admin/Views/Shared/_Layout.cshtml
+++ b/src/Mzayad.Web/Areas/admin/Views/Shared/_Layout.cshtml
@@ -18,6 +18,7 @@
     <div class="col-lg-3 col-md-4 hidden-print">
         <ul class="menu-list">
             <li><a href="@Url.Action("EmailTemplates", "Settings")"><i class="fa fa-fw fa-pad-right fa-envelope"></i>Email Templates</a></li> 
+            <li><a href="@Url.Action("Index", "Docs")"><i class="fa fa-fw fa-pad-right fa-file-text-o"></i>Development Docs</a></li> 
             <li><a disabled href="@Url.Action("Index", "Categories")"><i class="fa fa-fw fa-pad-right fa-sitemap"></i>Categories</a></li>
             <li><a disabled href="@Url.Action("Index", "Products")"><i class="fa fa-fw fa-pad-right fa-sitemap"></i>Products</a></li>
             <li><a disabled href="@Url.Action("Index", "Auctions")"><i class="fa fa-fw fa-pad-right fa-sitemap"></i>Auctions</a></li>
