--- a/src/Mzayad.Web/Views/Shared/_Layout.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; Mzayad</p>
+            <p lang="en">&copy; Mzayad</p>
         </footer>
     </div>
     @Scripts.Render("~/js/jquery")
