--- a/src/Mzayad.Web/Views/Shared/_Layout_StatusMessage.cshtml
+++ b/src/Mzayad.Web/Views/Shared/_Layout_StatusMessage.cshtml
@@ -7,7 +7,7 @@
 
 @if (statusMessage != null)
 {
-    <div class="wow fadeInDown">
+    <div class="wow fadeIn">
         @Html.StatusMessage(statusMessage)
     </div>
 }
